k8s/namespace.yaml
# ============================================================
# Digital List — Kubernetes Namespace
# Fichier : k8s/namespace.yaml
# Description : Isolation de tous les ressources du projet
#               Digital List dans un namespace dédié.
# Usage : kubectl apply -f k8s/namespace.yaml
# ============================================================

apiVersion: v1
kind: Namespace
metadata:
  name: digitallist
  labels:
    app: digitallist
    environment: production
    team: ict-university
    project: digital-list-sen3244
  annotations:
    description: "Namespace dédié au projet Digital List — SEN3244 ICT University"
    github: "https://github.com/Kamguia056/Digital_list"
    contact: "digital-list-team@ict-university.cm"
